--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host localhost --port 4200",
-    "build": "ng build --prod --base-href /abs-cyno/dist/",
+    "build": "ng build --prod --base-href /",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -34,6 +34,7 @@
     "pace-js": "^1.0.2",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
+    "validator": "^9.4.1",
     "web-animations-js": "^2.3.1",
     "wowjs": "^1.1.3",
     "zone.js": "^0.8.19",
