新增-压力情景

--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "bootstrap": "^4.0.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
+    "echarts": "^4.0.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "material-design-icons": "^3.0.1",
+    "ngx-echarts": "^2.1.0",
     "normalize.css": "^7.0.0",
     "pace-js": "^1.0.2",
     "popper.js": "^1.12.9",
