--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 192.168.20.67 --port 4200",
+    "start": "ng serve --host localhost --port 4200",
     "build": "ng build --prod --base-href /",
     "test": "ng test",
     "lint": "ng lint",
@@ -20,6 +20,7 @@
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
     "@angular/material": "^5.2.0",
+    "@angular/material-moment-adapter": "^5.2.5",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
@@ -31,6 +32,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "material-design-icons": "^3.0.1",
+    "moment": "^2.22.1",
     "ngx-echarts": "^2.1.0",
     "normalize.css": "^7.0.0",
     "pace-js": "^1.0.2",
