--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host localhost --port 4200",
+    "start": "ng serve --host 192.168.20.67 --port 4200",
     "build": "ng build --prod --base-href /",
     "test": "ng test",
     "lint": "ng lint",
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@azmenak/resumablejs": "^1.0.3",
     "animate.css": "^3.6.1",
     "bootstrap": "^4.0.0",
     "classlist.js": "^1.1.20150312",
